--- a/src/app/admin/add-articulo/add-articulo.component.html
+++ b/src/app/admin/add-articulo/add-articulo.component.html
@@ -10,7 +10,7 @@
   <div fxFlex="1300px">
     <div style="width: 100%; margin: 24px 0px 24px 0px">
       <span class="mat-h4"
-        >Nuevo artículo<span style="font-weight: 500">{{
+        >+Artículo<span style="font-weight: 500">{{
           ": " + articulo
         }}</span></span
       >
@@ -103,7 +103,7 @@
             fxLayoutAlign="start center"
             fxLayoutGap="24px"
           >
-            <div>
+            <div style="width: 100%;" fxLayoutAlign="start">
               <input
                 style="display: none"
                 type="file"
@@ -117,20 +117,22 @@
               <button
                 mat-flat-button
                 type="button"
-                color="accent"
                 (click)="addFileImagenes()"
               >
                 <mat-icon>attach_file</mat-icon>
                 Adjuntar
               </button>
             </div>
-            <div *ngIf="fileImagenes.length > 0">
-              <img
-                style="margin: 12px"
-                *ngFor="let imagen of imagenes"
-                [src]="imagen"
+            <div cdkDropList cdkDropListOrientation="horizontal" class="example-list" (cdkDropListDropped)="drop($event)" *ngIf="fileImagenes.length > 0">
+
+                <img
+                class="example-box"
+                [src]="imagen.data"
                 height="150px"
+                *ngFor="let imagen of imagenes" cdkDrag
               />
+
+
             </div>
           </div>
         </form>
@@ -162,7 +164,7 @@
                   [value]="0"
                   class="mat-body-strong"
                   style="color: #3f51b5"
-                  >Agregar/Editar/Quitar</mat-option
+                  >Agregar/Editar/Eliminar</mat-option
                 >
               </mat-select>
               <mat-hint>Categoría a la que pertenece</mat-hint>
@@ -184,7 +186,7 @@
                   [value]="0"
                   class="mat-body-strong"
                   style="color: #3f51b5"
-                  >Agregar/Editar/Quitar</mat-option
+                  >Agregar/Editar/Eliminar</mat-option
                 >
               </mat-select>
               <mat-hint>Subcategoría a la que pertenece</mat-hint>
@@ -206,7 +208,7 @@
                   [value]="0"
                   class="mat-body-strong"
                   style="color: #3f51b5"
-                  >Agregar/Editar/Quitar</mat-option
+                  >Agregar/Editar/Eliminar</mat-option
                 >
               </mat-select>
               <mat-hint>Marca del artículo</mat-hint>
