--- a/src/app/admin/articulos/articulos.component.html
+++ b/src/app/admin/articulos/articulos.component.html
@@ -1,1 +1,121 @@
-<p>articulos works!</p>
+<div
+  style="
+    width: 100%;
+    min-height: calc(
+      100vh - var(--footer-div-height) - var(--toolbar-div-height)
+    );
+  "
+  fxLayoutAlign="center"
+>
+  <div fxFlex="1300px">
+    <mat-form-field>
+      <mat-label>Filter</mat-label>
+      <input
+        matInput
+        (keyup)="applyFilter($event)"
+        placeholder="Ex. Mia"
+        #input
+      />
+    </mat-form-field>
+
+    <div class="mat-elevation-z8">
+      <table mat-table [dataSource]="dataSource" multiTemplateDataRows matSort>
+        <!-- ID Column -->
+        <ng-container matColumnDef="articulo">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Artículo</th>
+          <td mat-cell *matCellDef="let row">{{ row.articulo }}</td>
+        </ng-container>
+
+        <!-- Progress Column -->
+        <ng-container matColumnDef="precio">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Precio</th>
+          <td mat-cell *matCellDef="let row">{{ row.precio | formatoMoneda}}</td>
+        </ng-container>
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="stock">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>
+            Cantidad Disponibles
+          </th>
+          <td mat-cell *matCellDef="let row">{{ row.stock }}</td>
+        </ng-container>
+
+        <!-- Color Column -->
+        <ng-container matColumnDef="marca">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Marca</th>
+          <td mat-cell *matCellDef="let row">
+            {{ row.marca }}
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="descuento">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Descuento</th>
+          <td mat-cell *matCellDef="let row">
+            {{ row.descuento ? row.descuento + "%" : "" }}
+          </td>
+        </ng-container>
+
+        <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
+        <ng-container matColumnDef="expandedDetail">
+          <td
+            mat-cell
+            *matCellDef="let element"
+            [attr.colspan]="displayedColumns.length"
+          >
+            <div
+              class="example-element-detail"
+              [@detailExpand]="
+                element == expandedElement ? 'expanded' : 'collapsed'
+              "
+            >
+              <div class="example-element-diagram">
+                <div class="example-element-position">
+                  {{ element.stock }}
+                </div>
+                <div class="example-element-symbol">{{ element.stock }}</div>
+                <div class="example-element-name">{{ element.articulo }}</div>
+                <div class="example-element-weight">
+                  {{ element.fecha_creacion | date }}
+                </div>
+              </div>
+              <div class="example-element-description">
+                {{ element.imagen }}
+                <span class="example-element-description-attribution">
+                  -- Wikipedia
+                </span>
+              </div>
+            </div>
+          </td>
+        </ng-container>
+
+        <!-- <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr> -->
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr
+          mat-row
+          *matRowDef="let row; columns: displayedColumns"
+          class="example-element-row"
+          [class.example-expanded-row]="expandedElement === row"
+          (click)="expandedElement = expandedElement === row ? null : row"
+        ></tr>
+        <tr
+          mat-row
+          *matRowDef="let row; columns: ['expandedDetail']"
+          class="example-detail-row"
+        ></tr>
+        <!-- Row shown when there is no matching data. -->
+        <tr class="mat-row" *matNoDataRow>
+          <td class="mat-cell" colspan="4">
+            Ningún resultado para "{{ input.value }}"
+          </td>
+        </tr>
+      </table>
+
+      <mat-paginator
+        [pageSizeOptions]="[5, 10, 25, 100]"
+        showFirstLastButtons
+      ></mat-paginator>
+    </div>
+  </div>
+</div>
