--- a/src/app/admin/articulos/articulos.component.html
+++ b/src/app/admin/articulos/articulos.component.html
@@ -7,29 +7,32 @@
   "
   fxLayoutAlign="center"
 >
-  <div fxFlex="1300px">
-    <mat-form-field>
-      <mat-label>Filter</mat-label>
+  <div style="margin-top: 20px;" fxFlex="1300px" >
+    <span class="mat-h1">Articulos</span>
+    <mat-form-field appearance="fill">
+      <mat-label>Buscar</mat-label>
       <input
         matInput
         (keyup)="applyFilter($event)"
-        placeholder="Ex. Mia"
+        placeholder="Buscar..."
         #input
       />
     </mat-form-field>
 
-    <div class="mat-elevation-z8">
+    <div style="margin-top: 9px;">
       <table mat-table [dataSource]="dataSource" multiTemplateDataRows matSort>
         <!-- ID Column -->
         <ng-container matColumnDef="articulo">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Artículo</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header >Artículo</th>
           <td mat-cell *matCellDef="let row">{{ row.articulo }}</td>
         </ng-container>
 
         <!-- Progress Column -->
         <ng-container matColumnDef="precio">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Precio</th>
-          <td mat-cell *matCellDef="let row">{{ row.precio | formatoMoneda}}</td>
+          <td mat-cell *matCellDef="let row">
+            {{ row.precio | formatoMoneda }}
+          </td>
         </ng-container>
 
         <!-- Name Column -->
@@ -38,14 +41,6 @@
             Cantidad Disponibles
           </th>
           <td mat-cell *matCellDef="let row">{{ row.stock }}</td>
-        </ng-container>
-
-        <!-- Color Column -->
-        <ng-container matColumnDef="marca">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Marca</th>
-          <td mat-cell *matCellDef="let row">
-            {{ row.marca }}
-          </td>
         </ng-container>
 
         <ng-container matColumnDef="descuento">
@@ -67,29 +62,57 @@
               [@detailExpand]="
                 element == expandedElement ? 'expanded' : 'collapsed'
               "
+              fxLayout="row wrap"
             >
-              <div class="example-element-diagram">
-                <div class="example-element-position">
-                  {{ element.stock }}
+              <div style="width: 100%" fxLayout="row">
+                <div class="img-container" fxLayout="row" fxLayoutGap="10px">
+                  <img
+                    [src]="imgDomain + element.imagen"
+                    alt=""
+                    height="100%"
+                  />
+                  <div
+                    fxFlex="1 1 auto"
+                    style="height: 100%"
+                    fxLayout="column"
+                  >
+                    <div style="width: 100%" fxFlex="1 1 auto">
+                      <span class="mat-h2"> {{ element.categoria}}</span
+                      ><br />
+                      <span class="mat-h2"> {{ element.subcategoria }}</span
+                      ><br />
+                      <span class="mat-h2"> {{ element.marca }}</span>
+                    </div>
+                    <div style="width: 100%">
+                      <p class="mat-small" style="text-align: end">
+                        Publicado: {{ element.fecha_creacion | formatoFecha }}
+                      </p>
+                    </div>
+                    <div style="width: 100%;">
+                      <mat-divider style="width: 100%;"></mat-divider>
+
+                      <div class="bottom-buttons" fxLayoutAlign="end center">
+                        <button mat-icon-button color="warn">
+                          <mat-icon>delete</mat-icon>
+                        </button>
+                        <button mat-icon-button color="primary" (click)="openBottomSheet('descripcion', element.id_articulo)">
+                          <mat-icon>notes</mat-icon>
+                        </button>
+                        <button mat-icon-button color="primary" (click)="openBottomSheet('imagenes', element.id_articulo)">
+                          <mat-icon>collections</mat-icon>
+                        </button>
+                        <button mat-icon-button color="accent" [matMenuTriggerFor]="menu" (click)="updateSelectedArticuloId(element.id_articulo, element.index)">
+                          <mat-icon>more_vert</mat-icon>
+                        </button>
+                      </div>
+                    </div>
+
+                  </div>
                 </div>
-                <div class="example-element-symbol">{{ element.stock }}</div>
-                <div class="example-element-name">{{ element.articulo }}</div>
-                <div class="example-element-weight">
-                  {{ element.fecha_creacion | date }}
-                </div>
-              </div>
-              <div class="example-element-description">
-                {{ element.imagen }}
-                <span class="example-element-description-attribution">
-                  -- Wikipedia
-                </span>
               </div>
             </div>
           </td>
         </ng-container>
-
-        <!-- <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr> -->
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr
@@ -119,3 +142,42 @@
     </div>
   </div>
 </div>
+
+<mat-menu #menu="matMenu">
+  <button mat-menu-item (click)="openBottomSheet('edit-articulo', selectedIdArticulo)">
+    <mat-icon>edit</mat-icon>
+    <span>Nombre del Artículo</span>
+  </button>
+  <button mat-menu-item (click)="openBottomSheet('edit-descripcion', selectedIdArticulo)">
+    <mat-icon>edit</mat-icon>
+    <span>Descripción</span>
+  </button>
+  <button mat-menu-item (click)="openBottomSheet('edit-precio', selectedIdArticulo)">
+    <mat-icon>edit</mat-icon>
+    <span>Precio</span>
+  </button>
+  <button mat-menu-item (click)="openBottomSheet('edit-stock', selectedIdArticulo)">
+    <mat-icon>edit</mat-icon>
+    <span>Cantidad Disponibles</span>
+  </button>
+  <button mat-menu-item (click)="openBottomSheet('edit-categoria', selectedIdArticulo)">
+    <mat-icon>edit</mat-icon>
+    <span>Categoría</span>
+  </button>
+  <button mat-menu-item (click)="openBottomSheet('edit-subcategoria', selectedIdArticulo)">
+    <mat-icon>edit</mat-icon>
+    <span>Subcategoría</span>
+  </button>
+  <button mat-menu-item (click)="openBottomSheet('edit-marca', selectedIdArticulo)">
+    <mat-icon>edit</mat-icon>
+    <span>Marca</span>
+  </button>
+  <button mat-menu-item (click)="openBottomSheet('edit-imagenes', selectedIdArticulo)">
+    <mat-icon>edit</mat-icon>
+    <span>Imagenes</span>
+  </button>
+  <button mat-menu-item (click)="openBottomSheet('edit-descuento', selectedIdArticulo)">
+    <mat-icon>edit</mat-icon>
+    <span>Descuento</span>
+  </button>
+</mat-menu>
