--- a/src/app/shared/carousel/carousel.component.sass
+++ b/src/app/shared/carousel/carousel.component.sass
@@ -66,7 +66,7 @@
   .carousel-arrow
     width: 40px
     height: 40px
-    background-color: #fff
+    background-color: transparent
     background-repeat: no-repeat
     background-size: 31px
     background-position: center
@@ -76,13 +76,19 @@
     margin-top: -20px
     z-index: 10
     cursor: pointer
-    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.15)
+
   .carousel-arrow-prev
-    left: 10px
-    background-image: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIGhlaWdodD0iMjQiIHZpZXdCb3g9IjAgMCAyNCAyNCIgd2lkdGg9IjI0Ij48cGF0aCBkPSJNMTUuNDEgMTYuNTlMMTAuODMgMTJsNC41OC00LjU5TDE0IDZsLTYgNiA2IDYgMS40MS0xLjQxeiIvPjxwYXRoIGQ9Ik0wIDBoMjR2MjRIMFYweiIgZmlsbD0ibm9uZSIvPjwvc3ZnPg==)
+    left: 5px
+    display: flex
+    justify-content: center
+    align-items: center
+    box-shadow: 3px 0px 0px rgba(255, 255, 255, 0.9)
   .carousel-arrow-next
-    right: 10px
-    background-image: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIGhlaWdodD0iMjQiIHZpZXdCb3g9IjAgMCAyNCAyNCIgd2lkdGg9IjI0Ij48cGF0aCBkPSJNOC41OSAxNi41OUwxMy4xNyAxMiA4LjU5IDcuNDEgMTAgNmw2IDYtNiA2LTEuNDEtMS40MXoiLz48cGF0aCBkPSJNMCAwaDI0djI0SDBWMHoiIGZpbGw9Im5vbmUiLz48L3N2Zz4=)
+    right: 5px
+    display: flex
+    justify-content: center
+    align-items: center
+    box-shadow: -3px 0px 0px rgba(255, 255, 255, 0.9)
   .carousel-arrows-outside
     .carousel-arrow-prev
       left: -60px
