--- a/src/app/shared/carousel/carousel.component.html
+++ b/src/app/shared/carousel/carousel.component.html
@@ -21,7 +21,7 @@
         "
       >
         <div
-          style="height: 280px; cursor: pointer"
+          style="height: 390px; cursor: pointer"
           (click)="onClickCell(getImage(i))"
         >
           <img
@@ -34,12 +34,13 @@
         <p
           class="mat-body-strong"
           style="
+            margin: 10px;
             display: -webkit-box;
             -webkit-box-orient: vertical;
             overflow: hidden;
             text-overflow: ellipsis;
             white-space: normal;
-            -webkit-line-clamp: 3;
+            -webkit-line-clamp: 2;
             cursor: pointer;
           "
           (click)="onClickCell(getImage(i))"
@@ -58,7 +59,7 @@
           "
         >
           <!-- <span class="mat-h2">MX$5,418.00</span> -->
-          <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
+          <div fxLayout="row" style="margin-left: 10px;" fxLayoutAlign="start center" fxLayoutGap="5px">
             <span style="font-size: 1.3rem; color: red">-30%</span>
             <div fxLayout="column">
               <span style="font-weight: 500; font-size: 1.1rem"
@@ -70,6 +71,7 @@
             </div>
           </div>
           <button
+           style="margin-right: 10px;"
             mat-icon-button
             color="primary"
             type="button"
